# FIAP_TechChallenge4_Prediction

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/routers/: markets.py  quotes.py
backend/backend/: main.py
backend/backend/api/routers/: markets.py  quotes.py
backend/backend/services/: stock_provider.py
backend/schemas/: stock.py
frontend/: package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: MarketSelector.jsx  QuoteResult.jsx  TickerSelector.jsx
