[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Miler",email = "estudos.miler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "investpy (>=1.0.8,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
